--- a/CSS/Landing.css
+++ b/CSS/Landing.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: rgb(233, 229, 229);
+    background-color: rgb(243, 238, 238);
     height: auto;
 }
 
@@ -28,6 +28,10 @@ header{
     height: 70px;
 }
 
+header .logo{
+    margin-top: 0.5rem;
+}
+
 header .logo img{
     margin-left: 10px;
     width: 55px;
@@ -35,6 +39,7 @@ header .logo img{
 }
 
 header .logo a{
+    color: rgb(15, 15, 72);
     display: flex;
     align-items: center;
     font-size: 18px;
@@ -157,34 +162,160 @@ main .bar .bar-in li button svg:hover{
 
 /*---------------------Start of Destinations Section----------------------------*/
 
+main .destination h1{
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
 main .destination .container{
     display: flex;
     flex-direction: column;
     padding: 40px;
+    gap: 2rem;
 }
 
-main .destination .container .top-container{
+main .destination .container .top{
     display: flex; 
-    justify-content: space-between; 
-    width: calc(100% - 100px);
+    justify-content: center; 
+    flex-wrap: wrap;
+    width: 100%;
 }
 
-main .destination .container .top-container .right,
-main .destination .container .top-container .left{
+main .destination .container .top .right,
+main .destination .container .top .left{
     flex: 1;
-    margin: 0 20px;
-    background: teal;
+    max-width: 800px;
+    color: white;
+    font-weight: 800;
+    font-size: 40px;
+    display: flex;
+    border-radius: 20px;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
+    background-size: cover;
+    background-position: center;
     position: relative;
     overflow: hidden;
     height: 400px;
+    margin: 0 20px;
+    text-align: center;
 }
-main .destination .container .top-container .left {
-    margin-left: 0; /* No left margin for the first box */
+
+main .destination .container .top .left {
+    background-image: url(/Images/Nuwara\ Eliya.jpg);
 }
-main .destination .container .top-container .right {
-    margin-right: 0; /* No left margin for the first box */
+main .destination .container .top .right { 
+    background-image: url(/Images/Badulla.jpg);
+}
+
+main .destination .container .middle{
+    display: flex; 
+    justify-content: center;
+    flex-wrap: wrap; 
+    width: 100%;
+}
+
+main .destination .container .middle .right,
+main .destination .container .middle .left,
+main .destination .container .middle .center{
+    flex: 1;
+    max-width: 800px;
+    color: white;
+    font-weight: 800;
+    font-size: 40px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
+    height: 200px;
+    margin: 0 20px;
+    text-align: left;
+    
+}
+
+main .destination .container .middle .left {
+    background-image: url(/Images/Kandy.jpg);
+}
+
+main .destination .container .middle .center { 
+    background-image: url(/Images/Sigiriya.jpg);
+}
+
+main .destination .container .middle .right { 
+    background-image: url(/Images/Galle.jpg);
+}
+
+
+main .destination .container .bottom{
+    display: flex; 
+    justify-content: center;
+    flex-wrap: wrap; 
+    width: 100%;
+}
+
+main .destination .container .bottom .right,
+main .destination .container .bottom .left{
+    flex: 1;
+    max-width: 800px;
+    color: white;
+    font-weight: 800;
+    font-size: 40px;
+    display: flex;
+    border-radius: 20px;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
+    height: 400px;
+    margin: 0 20px;
+    text-align: center;
+}
+
+main .destination .container .bottom .left {
+    background-image: url(/Images/Anuradhpuraya.jpg);
+}
+main .destination .container .bottom .right { 
+    background-image: url(/Images/Polonnaruwa.jpg);
 }
 /*---------------------End of Destinations Section----------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
